2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Worked on
	  scrolled window replacement.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DocumentLocation.cs: fixed operator.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/Platform.cs:
	* Mono.TextEditor/SimpleEditMode.cs:
	* Mono.TextEditor.Vi/ViActionMaps.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: More shift-tab fixage.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Corrected rounding of
	  fold rectangles.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed bug in logical line
	  number calculation.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed caret placement
	  bug.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Took out event handler on
	  destroy

	* Mono.TextEditor/TextViewMargin.cs: Try to use the weak caret
	  pos instead of the strong one.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Speed up the line
	  decorators a bit.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Corrected caret drawing
	  position.

2010-05-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/Platform.cs: Fix shift-tab brokenness.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: potentially fix search
	  maker update.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Corrected pixel rounding.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Draw lines using pango
	  coordinates instead of pixels (much better fix for #591459).

2010-05-20  Mike Krüger  <mkrueger@novell.com>
