@@ -1,5 +1,10 @@
 2010-05-25  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Did some
+	  minor changes at smartscrolledwindow.
+
+2010-05-25  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/TextEditor.cs:
 	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Worked on
 	  scrolled window replacement.
